# chess_sdl

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  window.cpp  window.h
src/game/: fen.cpp  fen.h  game.cpp  game.h  mouse_handler.cpp  mouse_handler.h  moves.cpp  moves.h  objects.h  textures.h
src/ui/: ui.cpp  ui.h
src/window/: window.cpp  window.h
